Fix spacing before Rückfahrt; compress Ap245.jpg

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -11,6 +11,10 @@ dd p:empty {
   display: none;
 }
 
+dd p {
+  margin-bottom: 2rem;
+}
+
 .billboard {
   height: 360px;
 }
